--- a/src/main/resources/Templates/Parent/addParentForm.html
+++ b/src/main/resources/Templates/Parent/addParentForm.html
@@ -5,7 +5,8 @@
     <title>Add Parent</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -25,7 +26,7 @@
                 <!-- User name -->
                 <div class="form-floating mb-1 mt-3">
                     <input type="text" th:field="*{username}" name="username" placeholder="Input Parent username (*)"
-                           id="usernameid"  class="form-control" required/>
+                           id="usernameid" class="form-control" required/>
                     <label class="form-label" for="usernameid">User name: </label>
                     <div th:if="${#fields.hasErrors('username')}">
                         <ul>
@@ -85,7 +86,8 @@
                     <form action="#" method="get" th:action="@{/m-parent/add-process}">
                         <select th:field="*{school}" required onchange="this.form.submit()">
                             <option value="">--Select School--</option>
-                            <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                            <option th:each="school : ${schoolList}" th:value="${school.id}"
+                                    th:text="${school.name}"></option>
                         </select>
                     </form>
                     <div th:if="${#fields.hasErrors('school')}">
@@ -99,7 +101,8 @@
                     <label class="form-label">Student: </label>
                     <select th:field="*{student}" required>
                         <option value="">--Select Student--</option>
-                        <option th:each="student : ${studentList}" th:value="${student.id}" th:text="${student.name}"></option>
+                        <option th:each="student : ${studentList}" th:value="${student.id}"
+                                th:text="${student.name}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('school')}">
                         <ul>
