--- a/src/main/resources/Templates/School/Classes/addFormClass.html
+++ b/src/main/resources/Templates/School/Classes/addFormClass.html
@@ -5,18 +5,18 @@
     <title>Add Class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new Class</h1>
 <div>
     <form th:action="@{/m-class/add-process}" th:object="${classes}" method="post">
         <div id="autoHide">
-            <div  th:if="${Error}" class="alert alert-danger">
+            <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
-            <div  th:if="${success}" class="alert alert-danger">
+            <div th:if="${success}" class="alert alert-danger">
                 <span th:text="${success}"></span>
             </div>
         </div>
@@ -52,7 +52,8 @@
         </div>
     </form>
     <div th:if="${classAddSuccess}">
-        <h3>You created a new Class "<span th:field="*{name}"></span>" of School: <span  th:field="*{school}"></span></h3>
+        <h3>You created a new Class "<span th:field="*{name}"></span>" of School: <span th:field="*{school}"></span>
+        </h3>
     </div>
 </div>
 <div>
