--- a/src/main/resources/Templates/School/Classes/indexClass.html
+++ b/src/main/resources/Templates/School/Classes/indexClass.html
@@ -5,8 +5,8 @@
     <title>Manager Class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -26,29 +26,29 @@
             <span th:text="${success}" class="alert-success"></span>
         </div>
     </div>
-        <table>
-            <th>Class Id</th>
-            <th>Class Name</th>
-            <th>Class belong to School Id</th>
-            <th>Class Grade</th>
-            <th colspan="2">Feature</th>
-            <tr th:each="class : ${classList}">
-                <td th:text="${class.id}"></td>
-                <td th:text="${class.name}"></td>
-<!--                START school-->
-                <td th:utext="'Name: '+ ${class.school.name != null ? class.school.name : 'null'}+'<br>Address: '+ ${class.school.address != null ? class.school.address : 'null'} +'<br>Phone: '+${class.school.phone != null ? class.school.phone : 'null'}"></td>
-<!--                END school-->
-                <td th:text="${class.grade}"></td>
-<!--                feature start-->
-                <td>
-                    <a th:href="@{/m-class/showModifyFormClass(id=${class.id})}" class="btn btn-success">Modify</a>
-                </td>
-                <td>
-                    <a th:href="@{/m-class/modify-delete(id=${class.id})}" class="btn btn-danger">Delete</a>
-                </td>
-<!--                end feature-->
-            </tr>
-        </table>
+    <table>
+        <th>Class Id</th>
+        <th>Class Name</th>
+        <th>Class belong to School Id</th>
+        <th>Class Grade</th>
+        <th colspan="2">Feature</th>
+        <tr th:each="class : ${classList}">
+            <td th:text="${class.id}"></td>
+            <td th:text="${class.name}"></td>
+            <!--                START school-->
+            <td th:utext="'Name: '+ ${class.school.name != null ? class.school.name : 'null'}+'<br>Address: '+ ${class.school.address != null ? class.school.address : 'null'} +'<br>Phone: '+${class.school.phone != null ? class.school.phone : 'null'}"></td>
+            <!--                END school-->
+            <td th:text="${class.grade}"></td>
+            <!--                feature start-->
+            <td>
+                <a th:href="@{/m-class/showModifyFormClass(id=${class.id})}" class="btn btn-success">Modify</a>
+            </td>
+            <td>
+                <a th:href="@{/m-class/modify-delete(id=${class.id})}" class="btn btn-danger">Delete</a>
+            </td>
+            <!--                end feature-->
+        </tr>
+    </table>
 
 </div>
 <div th:if="${success}">
