--- a/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
+++ b/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
@@ -5,15 +5,15 @@
     <title>Add Detail NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new Detail NoteBook</h1>
 <div>
     <form th:action="@{/m-note-detail/add-process}" th:object="${noteDetail}" method="post">
         <div id="autoHide">
-            <div  th:if="${Error}" class="alert alert-danger">
+            <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
         </div>
@@ -69,7 +69,7 @@
         </div>
         <div>
             <label>Teaching day: </label>
-            <input type="date" th:field="*{teachingDay}"  name="teachingDay">
+            <input type="date" th:field="*{teachingDay}" name="teachingDay">
             <div th:if="${#fields.hasErrors('teachingDay')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('teachingDay')}" th:text="${error}"></li>
