--- a/src/main/resources/Templates/School/NoteBook/DetailNoteBook/indexDetailNote.html
+++ b/src/main/resources/Templates/School/NoteBook/DetailNoteBook/indexDetailNote.html
@@ -5,7 +5,8 @@
     <title>Manager NotebookDetail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -42,7 +43,8 @@
             <td th:text="${note.teachingDay}"></td>
             <td th:text="${note.teacherComment}"></td>
             <td>
-                <a th:href="@{/m-note-detail/showModifyFormNoteDetail(id=${note.id})}" class="btn btn-success">Modify</a>
+                <a th:href="@{/m-note-detail/showModifyFormNoteDetail(id=${note.id})}"
+                   class="btn btn-success">Modify</a>
                 <a th:href="@{/m-note-detail/modify-delete(id=${note.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
