--- a/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
@@ -5,15 +5,15 @@
     <title>Add StudyRecord</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new StudyRecord</h1>
 <div>
     <form th:action="@{/m-study/add-process}" th:object="${studyRecord}" method="post">
         <div id="autoHide">
-            <div  th:if="${Error}" class="alert alert-danger">
+            <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
             <div th:if="${success}">
@@ -70,7 +70,8 @@
         </div>
         <div>
             <label>Comment of Teacher: </label>
-            <input type="text" th:field="*{commentOfTeacher}" placeholder="Input comment of teacher" name="conduct" required>
+            <input type="text" th:field="*{commentOfTeacher}" placeholder="Input comment of teacher" name="conduct"
+                   required>
             <div th:if="${#fields.hasErrors('commentOfTeacher')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('commentOfTeacher')}" th:text="${error}"></li>
