--- a/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
@@ -5,15 +5,15 @@
     <title>Add Score Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new Score Card</h1>
 <div>
     <form th:action="@{/m-score-card/add-process}" th:object="${scoreCard}" method="post">
         <div id="autoHide">
-            <div  th:if="${Error}" class="alert alert-danger">
+            <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
             <div th:if="${success}">
@@ -48,7 +48,8 @@
             <th:block th:if="${studentList != null} ">
                 <select th:field="*{student}" required>
                     <option value="">--Select Student--</option>
-                    <option th:each="student : ${studentList}" th:value="${student.id}" th:text="${student.firstName}"></option>
+                    <option th:each="student : ${studentList}" th:value="${student.id}"
+                            th:text="${student.firstName}"></option>
                 </select>
             </th:block>
             <th:block th:if="${studentList == null} ">
@@ -94,7 +95,8 @@
             <div>
                 <select th:field="*{subject}">
                     <option value="">--Select Subject</option>
-                    <option th:each="subject : ${subjectList}" th:value="${subject.id}" th:text="${subject.nameSubject}"></option>
+                    <option th:each="subject : ${subjectList}" th:value="${subject.id}"
+                            th:text="${subject.nameSubject}"></option>
                 </select>
             </div>
             <div th:if="${#fields.hasErrors('subject')}">
@@ -105,7 +107,8 @@
         </div>
         <div>
             <label>Score: </label>
-            <input type="number" th:field="*{score}" placeholder="Input Score" name="score" min="0" step="0.1" max="10" required>
+            <input type="number" th:field="*{score}" placeholder="Input Score" name="score" min="0" step="0.1" max="10"
+                   required>
             <div th:if="${#fields.hasErrors('score')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('score')}" th:text="${error}"></li>
