--- a/src/main/resources/Templates/School/Subject/ScoreCard/indexScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/indexScoreCard.html
@@ -5,7 +5,8 @@
     <title>Manager ScoreCard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -28,32 +29,32 @@
     </div>
     <table>
         <thead>
-            <th>Id</th>
-            <th>Name Exam</th>
-            <th>School</th>
-            <th>Student</th>
-            <th>Day Exam</th>
-            <th>Score</th>
-            <th>Subject</th>
-            <th>School Year</th>
-            <th>Feature</th>
+        <th>Id</th>
+        <th>Name Exam</th>
+        <th>School</th>
+        <th>Student</th>
+        <th>Day Exam</th>
+        <th>Score</th>
+        <th>Subject</th>
+        <th>School Year</th>
+        <th>Feature</th>
         </thead>
         <tbody>
-            <tr th:each="scoreCard : ${scoreCardList}">
-                <td th:text="${scoreCard.id != null ? scoreCard.id : 'null'}"></td>
-                <td th:text="${scoreCard.nameExam != null ? scoreCard.nameExam : 'null'}"></td>
-                <td th:text="${scoreCard.school.name != null ? scoreCard.school.name : 'null'}"></td>
-                <td th:text="${scoreCard.student.firstName != null ? scoreCard.student.firstName : 'null'}"></td>
-                <td th:text="${scoreCard.dayExam != null ? scoreCard.dayExam : 'null'}"></td>
-                <td th:text="${scoreCard.score != null ? scoreCard.score : 'null'}"></td>
-                <td th:text="${scoreCard.subject.nameSubject != null ? scoreCard.subject.nameSubject : 'null'}"></td>
-                <td th:text="${scoreCard.schoolYear != null ? scoreCard.schoolYear : 'null'}"></td>
-                <td>
-                    <a th:href="@{/m-score-card/showModifyFormScoreCard(id=${scoreCard.id})}"
-                       class="btn btn-success">Modify</a>
-                    <a th:href="@{/m-score-card/modify-delete(id=${scoreCard.id})}" class="btn btn-danger">Delete</a>
-                </td>
-            </tr>
+        <tr th:each="scoreCard : ${scoreCardList}">
+            <td th:text="${scoreCard.id != null ? scoreCard.id : 'null'}"></td>
+            <td th:text="${scoreCard.nameExam != null ? scoreCard.nameExam : 'null'}"></td>
+            <td th:text="${scoreCard.school.name != null ? scoreCard.school.name : 'null'}"></td>
+            <td th:text="${scoreCard.student.firstName != null ? scoreCard.student.firstName : 'null'}"></td>
+            <td th:text="${scoreCard.dayExam != null ? scoreCard.dayExam : 'null'}"></td>
+            <td th:text="${scoreCard.score != null ? scoreCard.score : 'null'}"></td>
+            <td th:text="${scoreCard.subject.nameSubject != null ? scoreCard.subject.nameSubject : 'null'}"></td>
+            <td th:text="${scoreCard.schoolYear != null ? scoreCard.schoolYear : 'null'}"></td>
+            <td>
+                <a th:href="@{/m-score-card/showModifyFormScoreCard(id=${scoreCard.id})}"
+                   class="btn btn-success">Modify</a>
+                <a th:href="@{/m-score-card/modify-delete(id=${scoreCard.id})}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
