--- a/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
@@ -5,8 +5,8 @@
     <title>Modify Score Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Modify Score Card</h1>
@@ -22,7 +22,7 @@
         </div>
         <div>
             <label>ScoreCard Id: <span th:field="*{id}"></span></label>
-            <input type="hidden"  th:field="*{id}">
+            <input type="hidden" th:field="*{id}">
         </div>
         <div>
             <label>School: </label>
@@ -84,7 +84,8 @@
             <div>
                 <select th:field="*{subject}">
                     <option value="">--Select Subject</option>
-                    <option th:each="subject : ${subjectList}" th:value="${subject.id}" th:text="${subject.nameSubject}"></option>
+                    <option th:each="subject : ${subjectList}" th:value="${subject.id}"
+                            th:text="${subject.nameSubject}"></option>
                 </select>
             </div>
             <div th:if="${#fields.hasErrors('subject')}">
