--- a/src/main/resources/Templates/School/Subject/ScoreCard/selectSchool.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/selectSchool.html
@@ -5,26 +5,26 @@
     <title>Add Score Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new Score Card</h1>
 <div>
     <form th:action="@{/m-score-card/showFormAddScoreCard}" th:object="${school}" method="post">
         <span>Select School</span>
-            <label>School: </label>
-            <select th:field="*{id}" required>
-                <option th:value="0">--Select School--</option>
-                <th:block th:each="schools : ${schoolList != null ? schoolList : 'null'}">
-                    <option th:value="${schools.id}" th:text="${schools.name}"></option>
-                </th:block>
-            </select>
-            <div th:if="${#fields.hasErrors('id')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('id')}" th:text="${error}"></li>
-                </ul>
-            </div>
+        <label>School: </label>
+        <select th:field="*{id}" required>
+            <option th:value="0">--Select School--</option>
+            <th:block th:each="schools : ${schoolList != null ? schoolList : 'null'}">
+                <option th:value="${schools.id}" th:text="${schools.name}"></option>
+            </th:block>
+        </select>
+        <div th:if="${#fields.hasErrors('id')}">
+            <ul>
+                <li th:each="error: ${#fields.hasErrors('id')}" th:text="${error}"></li>
+            </ul>
+        </div>
         <button class="btn btn-primary">Select</button>
     </form>
 </div>
