--- a/src/main/resources/Templates/School/Subject/addFormSubject.html
+++ b/src/main/resources/Templates/School/Subject/addFormSubject.html
@@ -5,15 +5,15 @@
     <title>Add Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Add new Subject</h1>
 <div>
     <form th:action="@{/m-subject/add-process}" th:object="${subject}" method="post">
         <div id="autoHide">
-            <div  th:if="${Error}" class="alert alert-danger">
+            <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
         </div>
