--- a/src/main/resources/Templates/School/Subject/indexSubject.html
+++ b/src/main/resources/Templates/School/Subject/indexSubject.html
@@ -5,7 +5,8 @@
     <title>Manager Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -32,17 +33,18 @@
         </thead>
         <tbody>
         <tr th:each="subject : ${subjectList}">
-            <td class="subject-id" th:text="${subject.id != null ? subject.id : 'null'}" data-id="${subject.id}" ></td>
+            <td class="subject-id" th:text="${subject.id != null ? subject.id : 'null'}" data-id="${subject.id}"></td>
             <td th:text="${subject.nameSubject != null ? subject.nameSubject : 'null'}"></td>
             <td>
                 <select class="school-select">
                     <option value="">--Select School--</option>
-                    <option th:each="school : ${subject.schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                    <option th:each="school : ${subject.schoolList}" th:value="${school.id}"
+                            th:text="${school.name}"></option>
                 </select>
             </td>
             <td>
                 <a class="btn btn-success" th:href="@{/m-subject/showModifyFormSubject(id=${subject.id})}">Modify</a>
-<!--                <a class="btn btn-success detail-link" >Detail</a>-->
+                <!--                <a class="btn btn-success detail-link" >Detail</a>-->
                 <a class="btn btn-danger" th:href="@{/m-subject/modify-delete(id=${subject.id})}">Delete</a>
             </td>
         </tr>
