--- a/src/main/resources/Templates/School/addForm.html
+++ b/src/main/resources/Templates/School/addForm.html
@@ -5,70 +5,70 @@
     <title>Add School</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
-    <h1>Add new School</h1>
-    <div>
-        <form th:action="@{/m-school/add-process}" th:object="${school}" method="post">
-            <div id="autoHide">
-                <div  th:if="${Error}" class="alert alert-danger">
-                    <span th:text="${Error}"></span>
-                </div>
-                <div  th:if="${success}" class="alert alert-danger">
-                    <span th:text="${success}"></span>
-                </div>
+<h1>Add new School</h1>
+<div>
+    <form th:action="@{/m-school/add-process}" th:object="${school}" method="post">
+        <div id="autoHide">
+            <div th:if="${Error}" class="alert alert-danger">
+                <span th:text="${Error}"></span>
             </div>
-            <div>
-                <label>School Name: </label>
-                <input type="text" th:field="*{name}" placeholder="Input name school" name="schoolname">
-                <div th:if="${#fields.hasErrors('name')}">
-                    <ul>
-                        <li th:each="error: ${#fields.hasErrors('name')}" th:text="${error}"></li>
-                    </ul>
-                </div>
+            <div th:if="${success}" class="alert alert-danger">
+                <span th:text="${success}"></span>
             </div>
-            <div>
-                <label>School Address: </label>
-                <input type="text" th:field="*{address}" placeholder="Input address school" name="schooladdress">
-                <div th:if="${#fields.hasErrors('address')}">
-                    <ul>
-                        <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                    </ul>
-                </div>
+        </div>
+        <div>
+            <label>School Name: </label>
+            <input type="text" th:field="*{name}" placeholder="Input name school" name="schoolname">
+            <div th:if="${#fields.hasErrors('name')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('name')}" th:text="${error}"></li>
+                </ul>
             </div>
-            <div>
-                <label>School Phone: </label>
-                <input type="tel" th:field="*{phone}" placeholder="Input phone school" name="schoolphone">
-                <div th:if="${#fields.hasErrors('phone')}">
-                    <ul>
-                        <li th:each="error: ${#fields.hasErrors('phone')}" th:text="${error}"></li>
-                    </ul>
-                </div>
+        </div>
+        <div>
+            <label>School Address: </label>
+            <input type="text" th:field="*{address}" placeholder="Input address school" name="schooladdress">
+            <div th:if="${#fields.hasErrors('address')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
+                </ul>
             </div>
-            <div>
-                <label>School Level: </label>
-                <select th:field="*{level}">
-                    <option th:value="None">--Select Level--</option>
-                    <option th:value="Primary_School">Primary School</option>
-                    <option th:value="Junior_High_School">Junior High School</option>
-                    <option th:value="High_School">High School</option>
-                </select>
-                <div th:if="${#fields.hasErrors('level')}">
-                    <ul>
-                        <li th:each="error: ${#fields.hasErrors('level')}" th:text="${error}"></li>
-                    </ul>
-                </div>
+        </div>
+        <div>
+            <label>School Phone: </label>
+            <input type="tel" th:field="*{phone}" placeholder="Input phone school" name="schoolphone">
+            <div th:if="${#fields.hasErrors('phone')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('phone')}" th:text="${error}"></li>
+                </ul>
             </div>
-            <div>
-                <button class="btn btn-primary" type="submit">Add</button>
+        </div>
+        <div>
+            <label>School Level: </label>
+            <select th:field="*{level}">
+                <option th:value="None">--Select Level--</option>
+                <option th:value="Primary_School">Primary School</option>
+                <option th:value="Junior_High_School">Junior High School</option>
+                <option th:value="High_School">High School</option>
+            </select>
+            <div th:if="${#fields.hasErrors('level')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('level')}" th:text="${error}"></li>
+                </ul>
             </div>
-        </form>
-    </div>
-    <div>
-        <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-        <a class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School List Manage</a>
-    </div>
+        </div>
+        <div>
+            <button class="btn btn-primary" type="submit">Add</button>
+        </div>
+    </form>
+</div>
+<div>
+    <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
+    <a class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School List Manage</a>
+</div>
 </body>
 </html>
