--- a/src/main/resources/Templates/School/indexSchool.html
+++ b/src/main/resources/Templates/School/indexSchool.html
@@ -5,8 +5,8 @@
     <title>Manager School</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -16,47 +16,47 @@
 </head>
 
 <body>
-    <div><h1>School Manage</h1></div>
-    <div>
-        <div id="autoHide">
-            <div th:if="${Error}">
-                <span th:text="${Error}" class="alert alert-danger"></span>
-            </div>
-            <div th:if="${success}">
-                <span th:text="${success}" class="alert alert-success"></span>
-            </div>
+<div><h1>School Manage</h1></div>
+<div>
+    <div id="autoHide">
+        <div th:if="${Error}">
+            <span th:text="${Error}" class="alert alert-danger"></span>
         </div>
-        <table>
-            <th>School Id</th>
-            <th>School Name</th>
-            <th>School Address</th>
-            <th>School Phone</th>
-            <th>School Level</th>
-            <th>Feature</th>
-            <tr th:each="school : ${schoolList}">
-                <td th:text="${school.id}"></td>
-                <td th:text="${school.name}"></td>
-                <td th:text="${school.address}"></td>
-                <td th:text="${school.phone}"></td>
-                <td th:text="${school.level}"></td>
-                <td>
-                    <a th:href="@{/m-school/showModifyForm(id=${school.id})}" class="btn btn-success">Modify</a>
-                    <a th:href="@{/m-school/modify-delete(id=${school.id})}" class="btn btn-danger">Delete</a>
-                    <!--                    <form th:action="@{/api-school/modify-delete}" th:object="${school}" method="post">-->
-                    <!--                        <input type="hidden" th:value="${school.id}">-->
-                    <!--                        <button type="submit" class="btn btn-danger">Delete</button>-->
-                    <!--                    </form>-->
-                </td>
-            </tr>
-        </table>
+        <div th:if="${success}">
+            <span th:text="${success}" class="alert alert-success"></span>
+        </div>
     </div>
-    <div th:if="${success}">
-        <span th:text="${success}" class="alert alert-danger"></span>
-    </div>
-    <div>
-        <a class="btn btn-primary" th:href="@{/m-school/showFormAddSchool}">Add school</a>
-        <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
-    </div>
+    <table>
+        <th>School Id</th>
+        <th>School Name</th>
+        <th>School Address</th>
+        <th>School Phone</th>
+        <th>School Level</th>
+        <th>Feature</th>
+        <tr th:each="school : ${schoolList}">
+            <td th:text="${school.id}"></td>
+            <td th:text="${school.name}"></td>
+            <td th:text="${school.address}"></td>
+            <td th:text="${school.phone}"></td>
+            <td th:text="${school.level}"></td>
+            <td>
+                <a th:href="@{/m-school/showModifyForm(id=${school.id})}" class="btn btn-success">Modify</a>
+                <a th:href="@{/m-school/modify-delete(id=${school.id})}" class="btn btn-danger">Delete</a>
+                <!--                    <form th:action="@{/api-school/modify-delete}" th:object="${school}" method="post">-->
+                <!--                        <input type="hidden" th:value="${school.id}">-->
+                <!--                        <button type="submit" class="btn btn-danger">Delete</button>-->
+                <!--                    </form>-->
+            </td>
+        </tr>
+    </table>
+</div>
+<div th:if="${success}">
+    <span th:text="${success}" class="alert alert-danger"></span>
+</div>
+<div>
+    <a class="btn btn-primary" th:href="@{/m-school/showFormAddSchool}">Add school</a>
+    <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
+</div>
 </body>
 <script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
