--- a/src/main/resources/Templates/Student/addStudentForm.html
+++ b/src/main/resources/Templates/Student/addStudentForm.html
@@ -5,7 +5,8 @@
     <title>Add Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -26,7 +27,7 @@
                 <!-- User name -->
                 <div class="form-floating mb-1 mt-3">
                     <input type="text" th:field="*{username}" name="username" placeholder="Input Student username (*)"
-                           id="usernameid"  class="form-control" required/>
+                           id="usernameid" class="form-control" required/>
                     <label class="form-label" for="usernameid">User name: </label>
                     <div th:if="${#fields.hasErrors('username')}">
                         <ul>
@@ -97,7 +98,8 @@
                     <form action="#" method="get" th:action="@{/m-student/add-process}">
                         <select th:field="*{school}" required onchange="this.form.submit()">
                             <option value="">--Select School--</option>
-                            <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                            <option th:each="school : ${schoolList}" th:value="${school.id}"
+                                    th:text="${school.name}"></option>
                         </select>
                     </form>
                     <div th:if="${#fields.hasErrors('school')}">
@@ -108,7 +110,7 @@
                 </div>
                 <div class="mb-1">
                     <input type="text" th:field="*{classes}" name="classes" placeholder="Input Class of Student Study"
-                           id="classes" class="form-control" />
+                           id="classes" class="form-control"/>
                     <label class="form-label" for="classes">Class id: </label>
                     <div th:if="${#fields.hasErrors('classes')}">
                         <ul>
@@ -118,7 +120,8 @@
                 </div>
 
                 <div class="mb-1">
-                    <input type="text" th:field="*{teacher}" name="teacher" placeholder="Input HomeRoomTeacher of Student"
+                    <input type="text" th:field="*{teacher}" name="teacher"
+                           placeholder="Input HomeRoomTeacher of Student"
                            id="teacher" class="form-control"/>
                     <label class="form-label" for="teacher">Teacher id: </label>
                     <div th:if="${#fields.hasErrors('teacher')}">
