--- a/src/main/resources/Templates/Student/indexStudent.html
+++ b/src/main/resources/Templates/Student/indexStudent.html
@@ -5,8 +5,8 @@
     <title>Manager Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -17,75 +17,76 @@
 
 <body>
 <div><h1>Student Manage</h1></div>
-    <div class="container">
-        <div class="row">
-            <div id="autoHide">
-                <div th:if="${Error}">
-                    <span th:text="${Error}" class="alert-danger"></span>
-                </div>
-                <div th:if="${success}">
-                    <span th:text="${success}" class="alert-success"></span>
-                </div>
+<div class="container">
+    <div class="row">
+        <div id="autoHide">
+            <div th:if="${Error}">
+                <span th:text="${Error}" class="alert-danger"></span>
             </div>
-            <table>
-                <th>Student Id</th>
-                <th>FirstName</th>
-                <th>LastName</th>
-                <th>Username</th>
-                <th>Address</th>
-                <th>Phone</th>
-                <th>Email</th>
-                <th>Class</th>
-                <th>Homeroom Teacher</th>
-                <th>Study at School</th>
-                <th>Parent</th>
-                <th>Position</th>
-                <th>Feature</th>
-                <tr th:each="student : ${studentList}">
-                    <td th:text="${student.id != null ? student.id : '--null--'}"></td>
-                    <td th:text="${student.firstName != null ? student.firstName : '--null--'}"></td>
-                    <td th:text="${student.lastName != null ? student.lastName : '--null--'}"></td>
-                    <td th:text="${student.username != null ? student.username : '--null--'}"></td>
-                    <td th:text="${student.address != null ? student.address : '--null--'}"></td>
-                    <td th:text="${student.phoneNumber != null ? student.phoneNumber : '--null--'}"></td>
-                    <td th:text="${student.email != null ? student.email : '--null--'}"></td>
-                    <td th:text="${student.classes != null ? student.classes : '--null--'}"></td>
-    <!--                cach 2:
-                        <td> <span th:unless="${student.teacher}" th:text="'null'"></span>
-                        <span th:if="${student.teacher}" th:text="${student.teacher}"></span></td>-->
-                    <td>
-                        <span  th:if="${student.teacher != null}" th:text="${student.teacher.username} +' ('+ ${student.teacher.id}+')'"></span>
-                        <span th:unless="${student.teacher == null}">--null--</span>
-                    </td>
-                    <!--            cach 1:-->
-                    <td th:text="${student.school.name != null ? student.school.name : '--null--'}"></td>
-                    <!--            cach 2:-->
-                    <!--            <td>-->
-                    <!--                <span th:text="'Name: '+${teacher.school.name}"></span>-->
-                    <!--                <br/>-->
-                    <!--                <span th:text="'Id: ' + ${teacher.school.id}"></span>-->
-                    <!--            </td>-->
-                    <td th:text="${student.parent != null ? student.parent : '--null--'}"></td>
-                    <td th:text="${student.position}"></td>
-                    <td>
-                        <div>
-                            <a th:href="@{/m-student/showModifyFormStudent(id=${student.id})}" class="btn btn-success">Modify</a>
-                        </div>
-                        <div>
-                            <a th:href="@{/m-student/modify-delete(id=${student.id})}" class="btn btn-danger">Delete</a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
+            <div th:if="${success}">
+                <span th:text="${success}" class="alert-success"></span>
+            </div>
         </div>
-        <div th:if="${success}">
-            <span th:text="${success}" class="alert alert-danger"></span>
-        </div>
-        <div>
-            <a class="btn btn-primary" th:href="@{/m-student/showFormAddStudent}">Add Student</a>
-            <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
-        </div>
+        <table>
+            <th>Student Id</th>
+            <th>FirstName</th>
+            <th>LastName</th>
+            <th>Username</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Class</th>
+            <th>Homeroom Teacher</th>
+            <th>Study at School</th>
+            <th>Parent</th>
+            <th>Position</th>
+            <th>Feature</th>
+            <tr th:each="student : ${studentList}">
+                <td th:text="${student.id != null ? student.id : '--null--'}"></td>
+                <td th:text="${student.firstName != null ? student.firstName : '--null--'}"></td>
+                <td th:text="${student.lastName != null ? student.lastName : '--null--'}"></td>
+                <td th:text="${student.username != null ? student.username : '--null--'}"></td>
+                <td th:text="${student.address != null ? student.address : '--null--'}"></td>
+                <td th:text="${student.phoneNumber != null ? student.phoneNumber : '--null--'}"></td>
+                <td th:text="${student.email != null ? student.email : '--null--'}"></td>
+                <td th:text="${student.classes != null ? student.classes : '--null--'}"></td>
+                <!--                cach 2:
+                                    <td> <span th:unless="${student.teacher}" th:text="'null'"></span>
+                                    <span th:if="${student.teacher}" th:text="${student.teacher}"></span></td>-->
+                <td>
+                    <span th:if="${student.teacher != null}"
+                          th:text="${student.teacher.username} +' ('+ ${student.teacher.id}+')'"></span>
+                    <span th:unless="${student.teacher == null}">--null--</span>
+                </td>
+                <!--            cach 1:-->
+                <td th:text="${student.school.name != null ? student.school.name : '--null--'}"></td>
+                <!--            cach 2:-->
+                <!--            <td>-->
+                <!--                <span th:text="'Name: '+${teacher.school.name}"></span>-->
+                <!--                <br/>-->
+                <!--                <span th:text="'Id: ' + ${teacher.school.id}"></span>-->
+                <!--            </td>-->
+                <td th:text="${student.parent != null ? student.parent : '--null--'}"></td>
+                <td th:text="${student.position}"></td>
+                <td>
+                    <div>
+                        <a th:href="@{/m-student/showModifyFormStudent(id=${student.id})}" class="btn btn-success">Modify</a>
+                    </div>
+                    <div>
+                        <a th:href="@{/m-student/modify-delete(id=${student.id})}" class="btn btn-danger">Delete</a>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
+    <div th:if="${success}">
+        <span th:text="${success}" class="alert alert-danger"></span>
+    </div>
+    <div>
+        <a class="btn btn-primary" th:href="@{/m-student/showFormAddStudent}">Add Student</a>
+        <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
+    </div>
+</div>
 </body>
 <script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
