--- a/src/main/resources/Templates/Teacher/addTeacher.html
+++ b/src/main/resources/Templates/Teacher/addTeacher.html
@@ -5,7 +5,8 @@
     <title>Add Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
@@ -29,7 +30,7 @@
                 <!-- User name -->
                 <div class="form-floating mb-1 mt-3">
                     <input type="text" th:field="*{username}" name="username" placeholder="Input Teacher username (*)"
-                           id="usernameid"  class="form-control" required/>
+                           id="usernameid" class="form-control" required/>
                     <label class="form-label" for="usernameid">User name: </label>
                     <div th:if="${#fields.hasErrors('username')}">
                         <ul>
@@ -97,8 +98,9 @@
                 </div>
 
                 <div class="form-floating mb-1">
-                    <input type="text" th:field="*{classesList}" name="classList" placeholder="Input Teacher work at class"
-                           id="class" class="form-control" required/>
+                    <input type="text" th:field="*{classesList}" name="classList"
+                           placeholder="Input Teacher work at class"
+                           id="class" class="form-control"/>
                     <label class="form-label" for="class">Class name: </label>
                     <div th:if="${#fields.hasErrors('classesList')}">
                         <ul>
@@ -111,7 +113,8 @@
                     <label class="form-label">Work at school: </label>
                     <select id="school_select" th:field="*{school}" required>
                         <option value="">--Select School--</option>
-                        <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+                        <option th:each="school : ${schoolList}" th:value="${school.id}"
+                                th:text="${school.name}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('school')}">
                         <ul>
@@ -120,10 +123,10 @@
                     </div>
                 </div>
 
-                <div class="form-floating mb-1">
+                <div class="mb-1">
                     <label class="form-label" for="subject_select">Subject id: </label>
                     <select name="subject" id="subject_select" th:field="*{subject}" required>
-                        <option value="#">--Select Subject--</option>
+                        <option th:value="0">--Select Subject--</option>
                     </select>
 
                     <div th:if="${#fields.hasErrors('school')}">
@@ -165,8 +168,8 @@
 </div>
 <script>
     document.addEventListener('DOMContentLoaded', function(){
-        const schoolSelect = document.getElementById("select_school");
-        const subjectSelect = document.getAnimations("subject_select");
+        const schoolSelect = document.getElementById('school_select');
+        const subjectSelect = document.getElementById('subject_select');
         schoolSelect.addEventListener('change', function(){
             const schoolId = schoolSelect.value;
             if(schoolId){
@@ -174,14 +177,14 @@
                 .then(response => response.json())
                 .then(subjects => {
                     // clear previous subjects
-                    subjectSelect.innerHTML = '<option value="#">--Select Subject--</option>';
+                    subjectSelect.innerHTML = '<option th:value="0">--Select Subject--</option>';
 
                     // Populate new subjects
                     subjects.forEach(subject => {
                         const option = document.createElement('option');
                         option.value = subject.id;
                         option.textContent = subject.nameSubject;
-                        subjectSelect.appenChild(option);
+                        subjectSelect.appendChild(option);
                     });
                 })
                 .catch(error => console.error('Error fetching Subject:', error));
