--- a/src/main/resources/Templates/Teacher/modifyFormTeacher.html
+++ b/src/main/resources/Templates/Teacher/modifyFormTeacher.html
@@ -5,8 +5,8 @@
     <title>Modify Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-    <script src="/resources/static/JavaScript/function.js"></script>
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <h1>Modify Teacher</h1>
@@ -74,27 +74,26 @@
                 </ul>
             </div>
         </div>
-
-        <div class="form-floating mb-1">
-            <input type="text" th:field="*{subject}" name="subject" placeholder="Input subject id"
-                   id="subject" class="form-control" required/>
-            <label class="form-label" for="subject">Subject id: </label>
-            <div th:if="${#fields.hasErrors('school')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="form-floating mb-1">
-            <label class="form-label">Work at school: </label>
-            <select th:field="*{school}" required>
-                <option value="">--Select School--</option>
+        <div class="mb-1">
+            <label class="form-label" for="school_select">Work at school: </label>
+            <select id="school_select" th:field="*{school}" required>
+                <option th:value="0">--Select School--</option>
                 <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
             </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mb-1">
+            <label class="form-label" for="subject_select">Subject id: </label>
+            <select th:field="*{subject}" id="subject_select">
+                <option th:value="0">--Select Subject</option>
+            </select>
+            <div th:if="${#fields.hasErrors('school')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
@@ -121,6 +120,18 @@
     <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        const selectSchool = document.getElementById('school_select');
+        const selectSubject = document.getElementById('subject_select');
+        selectSchool.addEventListener('change', function(){
+            const schoolId = selectSchool.value;
+            if(schoolId){
+
+            }
+        });
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
