--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -5,8 +5,8 @@
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
 </head>
 <body>
 <div class="row">
@@ -76,9 +76,11 @@
                     <hr class="dropdown-divider">
                 </li>
 
-                <li><form class="dropdown-item" action="#" th:action="@{/logout}" method="POST">
-                    <input type="submit" class="btn btn-info" value="Đăng xuất"/>
-                </form></li>
+                <li>
+                    <form class="dropdown-item" action="#" th:action="@{/logout}" method="POST">
+                        <input type="submit" class="btn btn-info" value="Đăng xuất"/>
+                    </form>
+                </li>
             </ul>
         </div>
     </div>
@@ -93,37 +95,48 @@
             <button sec:authorize="hasAnyRole('ADMIN')" class="btn btn-success">Xóa</button>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher Manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary"
+               th:href="@{/m-teacher/showManageTeacher}">Teacher Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student Manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')" class="btn btn-primary"
+               th:href="@{/m-student/showManageStudent}">Student Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent Manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')" class="btn btn-primary"
+               th:href="@{/m-parent/showManageParent}">Parent Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')"  class="btn btn-primary" th:href="@{/m-user/showManageUser}">User Manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary"
+               th:href="@{/m-user/showManageUser}">User Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord
+                Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard Manage</a>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard
+                Manage</a>
         </div>
     </div>
 </div>
