--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="/static/CSS/main.css" rel="stylesheet">
+    <script src="/static/JavaScript/function.js"></script>
     <style>
         body {
           min-height: 100vh;
@@ -47,13 +49,13 @@
         </div>
         <!-- User name -->
         <div class="form-outline mb-4">
-            <input type="text" name="username" id="form2Example1" class="form-control" />
+            <input type="text" name="username" id="form2Example1" class="form-control"/>
             <label class="form-label" for="form2Example1">Account Name</label>
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-4">
-            <input type="password" name="password" id="form2Example2" class="form-control" />
+            <input type="password" name="password" id="form2Example2" class="form-control"/>
             <label class="form-label" for="form2Example2">Password</label>
         </div>
 
@@ -62,14 +64,14 @@
             <div class="col d-flex justify-content-center">
                 <!-- Checkbox -->
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                    <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked/>
                     <label class="form-check-label" for="form2Example31">Remember me</label>
                 </div>
             </div>
 
             <div class="col">
                 <!-- Simple link -->
-                <a href="#!">Forgot Password ?</a>
+                <a href="#">Forgot Password ?</a>
             </div>
         </div>
 
@@ -82,7 +84,9 @@
         </div>
     </form>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
 </div>
 </body>
 <script src="/resources/static/JavaScript/function.js"></script>
