--- a/src/main/resources/Templates/School/Classes/addFormClass.html
+++ b/src/main/resources/Templates/School/Classes/addFormClass.html
@@ -30,11 +30,25 @@
             </div>
         </div>
         <div>
-            <label>School id: </label>
-            <input type="tel" th:field="*{school}" placeholder="Input school id" name="shoolid">
+            <label>Select School: </label>
+            <select id="school_select" th:field="*{school}">
+                <option th:value="0">--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+            </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <label>Select Teacher: </label>
+            <select th:field="*{teacher}" id="teacher_select">
+                <option th:value="0">--Select Teacher--</option>
+            </select>
+            <div th:if="${#fields.hasErrors('teacher')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('teacher')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
@@ -61,4 +75,39 @@
     <a class="btn btn-primary" th:href="@{/m-class/showManageClass}">School List Manage</a>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        const schoolSelect = document.getElementById('school_select');
+        const teacherSelect = document.getElementById('teacher_select');
+        schoolSelect.addEventListener('change', function(){
+            const schoolID = schoolSelect.value;
+            if(schoolID){
+                fetch(`/m-class/getListTeacherBySchool/${schoolID}`)
+                .then(response => response.json())
+                .then(teachers =>{
+                    // clear previous class
+                    teacherSelect.innerHTML = '<option th:value="0">--Select Teacher--</option>';
+
+                    // populate new teachers
+                    teachers.array.forEach(teacher => {
+                        const option = document.createElement('option');
+                        option.value = teacher.id;
+                        option.textContent =teacher.lastName +' '+ teacher.firstName;
+                        teacherSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching teachers', error));
+            } else {
+                // if no school selected
+                teacherSelect.innerHTML = '<option th:value="0">--Select Teacher--</option>';
+            }
+        });
+    });
+</script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </html>
