--- a/src/main/resources/Templates/School/Classes/formModifyClass.html
+++ b/src/main/resources/Templates/School/Classes/formModifyClass.html
@@ -36,11 +36,24 @@
         </div>
         <div>
             <label>Class of School Id: </label>
-            <input type="text" th:field="*{school}" placeholder="Input school id"
-                   name="schoolid">
+            <select id="school_select" th:field="*{school}">
+                <option th:value="0">--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+            </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <label>Select Teacher: </label>
+            <select th:field="*{teacher}" id="teacher_select">
+                <option th:value="0">--Select Teacher--</option>
+            </select>
+            <div th:if="${#fields.hasErrors('teacher')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('teacher')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
@@ -67,6 +80,33 @@
     <a class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class List Manage</a>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        const schoolSelect = document.getElementById('school_select');
+        const teacherSelect = document.getElementById('teacher_select');
+        schoolSelect.addEventListener('change', function(){
+            const schoolId = schoolSelect.value;
+            if(schoolId){
+                fetch(`/m-class/getListTeacherBySchool/${schoolId}`)
+                .then(response => response.json())
+                .then(teachers =>{
+                    // clear previous teacher
+                    teacherSelect.innerHTML = '<option th:value="0">--Select Teacher--</option>';
+                    teachers.array.forEach(teacher => {
+                        const option = document.createElement('option');
+                        option.value = teacher.id;
+                        option.textContent = teacher.lastName + ' '+ teacher.firstName;
+                        teacherSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching teacher', error));
+            } else {
+                // if no school selected
+                teacherSelect.innerHTML = '<option th:value="0">--Select Teacher--</option>';
+            }
+        });
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
